--- a/rover_simulation/CMakeLists.txt
+++ b/rover_simulation/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(catkin REQUIRED)
 catkin_package()
 
 install(
-  DIRECTORY launch
+  DIRECTORY config launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
