--- a/rover_description/package.xml
+++ b/rover_description/package.xml
@@ -10,15 +10,15 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roslaunch</build_depend>
+  <depend>uwrt_arm_hw</depend>
 
   <exec_depend>gazebo_ros_control</exec_depend>
   <exec_depend>hardware_interface</exec_depend>
-  <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
 
+  <test_depend>roslaunch</test_depend>
   <export>
   </export>
 </package>
