--- a/rover_simulation/package.xml
+++ b/rover_simulation/package.xml
@@ -10,12 +10,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roslaunch</build_depend>
-
-  <exec_depend>controller_manager</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
-  <exec_depend>position_controllers</exec_depend>
   <exec_depend>rover_description</exec_depend>
+
+  <test_depend>roslaunch</test_depend>
 
   <export>
   </export>
