--- a/uwrt_mars_rover_hw/package.xml
+++ b/uwrt_mars_rover_hw/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>uwrt_rover_hw</name>
+  <name>uwrt_mars_rover_hw</name>
   <version>0.0.0</version>
-  <description>The uwrt_rover_hw package</description>
+  <description>Package containing all ros-control hw interfaces and the hw control loops</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="wmmc88@todo.todo">wmmc88</maintainer>
+  <maintainer email="melvin.mc.wang@gmail.com">wmmc88</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/uwrt_rover_hw</url> -->
+  <!-- <url type="website">http://wiki.ros.org/uwrt_mars_rover_hw</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
