--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ language: generic # optional, just removes the language badge
 services:
   - docker
 
+cache:
+  directories:
+    - $HOME/.ccache
+
 notifications:
   email:
     recipients:
@@ -20,11 +24,15 @@ git:
 # https://github.com/ros-industrial/industrial_ci/blob/master/doc/index.rst#variables-you-can-configure
 env:
   global: # global settings for all jobs
+    - CCACHE_DIR=$HOME/.ccache
     - ROS_REPO=ros
-#    - CLANG_FORMAT_CHECK=file
     - CLANG_TIDY=pedantic
     - CATKIN_LINT=pedantic
   matrix: # each line is a job
+    # Format Check Job
+    - CLANG_FORMAT_CHECK=file
+
+    # Build Jobs
     - ROS_DISTRO="melodic"
     - ROS_DISTRO="melodic" ROS_REPO=ros-testing # overrides the global
 
