--- a/uwrt_mars_rover_msgs/CMakeLists.txt
+++ b/uwrt_mars_rover_msgs/CMakeLists.txt
@@ -8,6 +8,7 @@ project(uwrt_mars_rover_msgs)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  message_generation
   std_msgs
 )
 
@@ -103,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES uwrt_mars_rover_msgs
-#  CATKIN_DEPENDS std_msgs
+  CATKIN_DEPENDS std_msgs
 #  DEPENDS system_lib
 )
 
