--- a/uwrt_mars_rover_msgs/package.xml
+++ b/uwrt_mars_rover_msgs/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>uwrt_mars_rover_msgs</name>
   <version>0.0.0</version>
-  <description>The uwrt_mars_rover_msgs package</description>
+  <description>Package containing all custom msgs used within the uwrt_mars_rover metapackage</description>
 
   <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
 
