add science hw files to CMake file

--- a/uwrt_mars_rover_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_hw/CMakeLists.txt
@@ -54,7 +54,9 @@ add_library(${PROJECT_NAME}
         src/${PROJECT_NAME}_control_loop_real.cpp
         src/${PROJECT_NAME}_drivetrain.cpp
         src/${PROJECT_NAME}_drivetrain_real.cpp
-        )
+        src/${PROJECT_NAME}_science.cpp
+        src/${PROJECT_NAME}_science_real.cpp
+)
 
 add_library(roboteq_driver
         drivers/roboteq_driver/src/CanopenInterface.cpp
