--- a/uwrt_arm/uwrt_arm/package.xml
+++ b/uwrt_arm/uwrt_arm/package.xml
@@ -10,7 +10,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <exec_depend>uwrt_arm_control</exec_depend>
+  <exec_depend>uwrt_arm_description</exec_depend>
   <exec_depend>uwrt_arm_hw</exec_depend>
+  <exec_depend>uwrt_arm_moveit_config</exec_depend>
+  <exec_depend>uwrt_arm_msgs</exec_depend>
 
   <export>
     <metapackage/>
