--- a/uwrt_arm/uwrt_arm_control/package.xml
+++ b/uwrt_arm/uwrt_arm_control/package.xml
@@ -8,11 +8,24 @@
   <license>MIT</license>
   <author email="s2daga@uwaterloo.ca">Somesh Daga</author>
 
-
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roscpp</build_depend>
+  <build_depend>roslint</build_depend>
+
   <exec_depend>controller_manager</exec_depend>
+  <exec_depend>joint_trajectory_controller</exec_depend>
+  <exec_depend>moveit_commander</exec_depend>
+  <exec_depend>moveit_jog_arm</exec_depend>
+  <exec_depend>moveit_ros_control_interface</exec_depend>
+  <exec_depend>moveit_ros_move_group</exec_depend>
+  <exec_depend>position_controllers</exec_depend>
+  <exec_depend>velocity_controllers</exec_depend>
   <exec_depend>uwrt_arm_hw</exec_depend>
+  <exec_depend>uwrt_arm_moveit_config</exec_depend>
+
+  <depend>control_msgs</depend>
+  <depend>uwrt_arm_msgs</depend>
 
   <test_depend>roslaunch</test_depend>
 
