--- a/uwrt_mars_rover_hw/config/drivetrain_controllers.yaml
+++ b/uwrt_mars_rover_hw/config/drivetrain_controllers.yaml
@@ -8,9 +8,10 @@ uwrt_mars_rover:
       - left_drive_joint
       - right_drive_joint
 
+
   rover_state_controller:
-    type:         joint_state_controller/JointStateController
-    publish_rate: 50.0
+    type: joint_state_controller/JointStateController
+    publish_rate: 50
 
   drivetrain_velocity_controller:
     type: diff_drive_controller/DiffDriveController
@@ -24,29 +25,30 @@ uwrt_mars_rover:
     # Wheel separation and diameter. These are both optional.
     # diff_drive_controller will attempt to read either one or both from the
     # URDF if not specified as a parameter
-    wheel_separation: 1.0
+    wheel_separation: 1.0 #TODO: Update
     wheel_radius: 0.15
 
     # Velocity commands timeout [s], default 0.5
     cmd_vel_timeout: 1
 
-  #  # Velocity and acceleration limits
-  #  # Whenever a min_* is unspecified, default to -max_*
-  #  linear:
-  #    x:
-  #      has_velocity_limits: true
-  #      max_velocity: 1.0  # m/s
-  #      min_velocity: -0.5 # m/s
-  #      has_acceleration_limits: true
-  #      max_acceleration: 0.8  # m/s^2
-  #      min_acceleration: -0.4 # m/s^2
-  #      has_jerk_limits: true
-  #      max_jerk: 5.0  # m/s^3
-  #  angular:
-  #    z:
-  #      has_velocity_limits: true
-  #      max_velocity: 1.7  # rad/s
-  #      has_acceleration_limits: true
-  #      max_acceleration: 1.5  # rad/s^2
-  #      has_jerk_limits: true
-  #      max_jerk: 2.5  # rad/s^3
+    # TODO
+    #  # Velocity and acceleration limits
+    #  # Whenever a min_* is unspecified, default to -max_*
+    #  linear:
+    #    x:
+    #      has_velocity_limits: true
+    #      max_velocity: 1.0  # m/s
+    #      min_velocity: -0.5 # m/s
+    #      has_acceleration_limits: true
+    #      max_acceleration: 0.8  # m/s^2
+    #      min_acceleration: -0.4 # m/s^2
+    #      has_jerk_limits: true
+    #      max_jerk: 5.0  # m/s^3
+    #  angular:
+    #    z:
+    #      has_velocity_limits: true
+    #      max_velocity: 1.7  # rad/s
+    #      has_acceleration_limits: true
+    #      max_acceleration: 1.5  # rad/s^2
+    #      has_jerk_limits: true
+    #      max_jerk: 2.5  # rad/s^3
