--- a/uwrt_mars_rover_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_hw/CMakeLists.txt
@@ -53,8 +53,8 @@ add_library(${PROJECT_NAME}
         )
 
 add_library(roboteq_driver
-        drivers/roboteq_driver/src/roboteq_controller.cpp
         drivers/roboteq_driver/src/canopen_comm.cpp
+        drivers/roboteq_driver/src/roboteq_controller.cpp
         )
 
 ## Declare a C++ executable
@@ -89,15 +89,21 @@ install(TARGETS ${PROJECT_NAME}_node
         )
 
 ## Mark libraries for installation
-install(TARGETS ${PROJECT_NAME}
+install(TARGETS
+        roboteq_driver
+        ${PROJECT_NAME}
         ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
         LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
         RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
         )
 
 ## Mark cpp header files for installation
-install(DIRECTORY include/${PROJECT_NAME}/
+install(DIRECTORY
+        drivers/roboteq_driver/include/
+        include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-        FILES_MATCHING PATTERN "*.h"
+        FILES_MATCHING
+        PATTERN  "*.h"
+        PATTERN "*.hpp"
         PATTERN ".svn" EXCLUDE
         )
