still need some minor changes, ready to test

--- a/drive_to_gps/.vscode/settings.json
+++ b/drive_to_gps/.vscode/settings.json
@@ -2,5 +2,9 @@
     "files.associations": {
         "cmath": "cpp",
         "complex": "cpp"
-    }
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/azumn/catkin_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
+    ]
 }
