--- a/drive_to_gps/CMakeLists.txt
+++ b/drive_to_gps/CMakeLists.txt
@@ -15,10 +15,13 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   sensor_msgs
   dynamic_reconfigure
+  actionlib_msgs
+  actionlib
+  genmsg
 )
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Boost REQUIRED COMPONENTS system)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -52,7 +55,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
-  DIRECTORY msg FILES heading.msg dist_heading.msg
+  DIRECTORY msg FILES heading.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -63,16 +66,20 @@ add_message_files(
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  DIRECTORY
+  action
+  FILES
+  gps_goal.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
+  sensor_msgs
+  actionlib_msgs
 )
 
 ################################################
@@ -106,7 +113,9 @@ generate_dynamic_reconfigure_options(
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES drive_to_gps
-#  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+ CATKIN_DEPENDS message_runtime geometry_msgs
+  sensor_msgs
+  actionlib_msgs
 #  DEPENDS system_lib
 )
 
@@ -210,6 +219,26 @@ add_executable(current_heading src/current_heading.cpp)
 target_link_libraries(current_heading ${catkin_LIBRARIES})
 add_dependencies(current_heading drive_to_gps_generate_messages_cpp ${PROJECT_NAME}_gencfg)
 
-add_executable(calculate_twist src/calculate_twist.cpp)
-target_link_libraries(calculate_twist ${catkin_LIBRARIES})
-add_dependencies(calculate_twist drive_to_gps_generate_messages_cpp)
+add_executable(calculate_twist_server src/calculate_twist_server.cpp)
+
+target_link_libraries(
+  calculate_twist_server
+  ${catkin_LIBRARIES}
+)
+
+add_dependencies(
+  calculate_twist_server
+  ${drive_to_gps_EXPORTED_TARGETS}
+)
+
+add_executable(turtle_client src/turtle_client.cpp)
+
+target_link_libraries(
+  turtle_client
+  ${catkin_LIBRARIES}
+)
+
+add_dependencies(
+  turtle_client
+  ${drive_to_gps_EXPORTED_TARGETS}
+)
