--- a/drive_to_gps/package.xml
+++ b/drive_to_gps/package.xml
@@ -17,6 +17,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -29,6 +31,8 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>actionlib</exec_depend>
 
   <export>
 
