--- a/uwrt_mars_rover_hw/package.xml
+++ b/uwrt_mars_rover_hw/package.xml
@@ -14,6 +14,7 @@
     <depend>controller_manager</depend>
     <depend>hardware_interface</depend>
     <depend>joint_limits_interface</depend>
+    <depend>transmission_interface</depend>
     <depend>roscpp</depend>
 
 </package>
