--- a/uwrt_mars_rover_gimbtonomy/package.xml
+++ b/uwrt_mars_rover_gimbtonomy/package.xml
@@ -1,20 +1,16 @@
-EDIT THIS LATER
 <?xml version="1.0"?>
 <package format="2">
-    <name>uwrt_mars_rover_hw</name>
+    <name>uwrt_mars_rover_gimbtonomy</name>
     <version>0.0.0</version>
-    <description>Package containing all ros-control hw interfaces and the hw control loops</description>
+    <description>Package for ROS implementation of neopixels</description>
 
-    <maintainer email="melvin.mc.wang@gmail.com">wmmc88</maintainer>
+    <maintainer email="yreda@uwaterloo.com">yreda1999</maintainer>
 
     <license>MIT</license>
 
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <depend>controller_manager</depend>
-    <depend>hardware_interface</depend>
-    <depend>joint_limits_interface</depend>
     <depend>roscpp</depend>
 
 </package>
