--- a/uwrt_mars_rover_gimbtonomy/package.xml
+++ b/uwrt_mars_rover_gimbtonomy/package.xml
@@ -11,6 +11,10 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <build_depend>message_generation</build_depend>
+    <depend>uwrt_mars_rover_msgs</depend>
+    <exec_depend>message_runtime</exec_depend>
+
     <depend>roscpp</depend>
 
 </package>
