--- a/uwrt_mars_rover_msgs/CMakeLists.txt
+++ b/uwrt_mars_rover_msgs/CMakeLists.txt
@@ -46,18 +46,16 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  NeopixelArrayMode.msg
+)
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  set_state.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,10 +65,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -104,7 +102,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
         #  INCLUDE_DIRS include
         #  LIBRARIES uwrt_mars_rover_msgs
-        CATKIN_DEPENDS std_msgs
+        CATKIN_DEPENDS std_msgs message_runtime
         #  DEPENDS system_lib
 )
 
