Add custom indexer controllers

--- a/uwrt_mars_rover_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_hw/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
         joint_limits_interface
         roscpp
         transmission_interface
+
+        indexer_controller
         )
 
 ###################################
@@ -34,6 +36,8 @@ catkin_package(
         joint_limits_interface
         roscpp
         transmission_interface
+
+        indexer_controller
 )
 
 ###########
