--- a/uwrt_utils/package.xml
+++ b/uwrt_utils/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="wrraftus@uwaterloo.ca">Walter Raftus</maintainer>
 
-  <license>BSD-3</license>
+  <license>MIT</license>
 
 
   <buildtool_depend>catkin</buildtool_depend>
