--- a/uwrt_utils/CMakeLists.txt
+++ b/uwrt_utils/CMakeLists.txt
@@ -4,6 +4,7 @@ project(uwrt_utils)
 # Load catkin and package dependencies
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  std_msgs
 )
 
 # Declare a catkin package
@@ -11,7 +12,8 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS
-    roscpp
+  roscpp
+  std_msgs
 )
 
 # Specify additional locations of header files
@@ -21,18 +23,36 @@ include_directories(
 )
 
 # Declare and link the C++
-add_library(${PROJECT_NAME} src/uwrt_can.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
-
-# Install headers
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h"
+add_library(${PROJECT_NAME}
+  src/uwrt_utils_test_node.cpp
+  src/uwrt_can.cpp
 )
+
+# add executable and set dependencies
+add_executable(uwrt_utils_test_node src/uwrt_utils_test_node.cpp)
+set_target_properties(uwrt_utils_test_node PROPERTIES OUTPUT_NAME node PREFIX "")
+add_dependencies(uwrt_utils_test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+# link dependencies for executable
+target_link_libraries(uwrt_utils_test_node
+  ${PROJECT_NAME} 
+  ${catkin_LIBRARIES}
+)
+
+# Install executable
+install(TARGETS uwrt_utils_test_node
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+        )
 
 # Install libraries
 install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
+
+# Install headers
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
 )
