--- a/uwrt_mars_rover_msgs/package.xml
+++ b/uwrt_mars_rover_msgs/package.xml
@@ -11,6 +11,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>std_msgs</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <build_depend>message_generation</build_depend>
 
