--- a/drive_to_gps/package.xml
+++ b/drive_to_gps/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="a8nanji@uwaterloo.ca">Azum Nanji</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -19,6 +19,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>uwrt_mars_rover_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -33,6 +34,7 @@
   <exec_depend>dynamic_reconfigure</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>actionlib</exec_depend>
+  <exec_depend>uwrt_mars_rover_msgs</exec_depend>
 
   <export>
 
