--- a/uwrt_mars_rover_hw/config/rover_hardware.yaml
+++ b/uwrt_mars_rover_hw/config/rover_hardware.yaml
@@ -17,9 +17,9 @@ uwrt_mars_rover:
     science:
       type: uwrt_mars_rover_hw/UWRTRoverHWScienceReal
       joints:
-        - elevator_joint
+        - science_elevator_joint
       indexers:
-        - geneva_indexer
-        - scooper_indexer
-        - cover_indexer
+        - science_geneva_indexer
+        - science_scooper_indexer
+        - science_cover_indexer
         # TODO (wraftus) Add sensors
