--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/cfg/drivetrain_controllers.yaml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/cfg/drivetrain_controllers.yaml
@@ -1,5 +1,19 @@
 uwrt_mars_rover:
 
+  drivetrain_position_controller:
+    type: position_controllers/UWRTOpenLoopPositionController
+    left_wheel: left_drive_joint
+    right_wheel: right_drive_joint
+
+    # Wheel separation and diameter. These are both optional.
+    # UWRTOpenLoopPositionController will attempt to read either one or both from the
+    # URDF if not specified as a parameter
+    wheel_separation: 0.762
+    wheel_radius: 0.1524
+
+    # Velocity commands timeout [s], default 0.5
+    cmd_pos_timeout: 0.5
+
   drivetrain_velocity_controller:
     type: diff_drive_controller/DiffDriveController
     left_wheel: left_drive_joint
