--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -12,9 +12,12 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <exec_depend>uwrt_mars_rover_msgs</exec_depend>
+    <exec_depend>uwrt_mars_rover_controllers</exec_depend>
+    <exec_depend>uwrt_mars_rover_hw</exec_depend>
 
     <export>
         <metapackage/>
     </export>
 
 </package>
+
