--- a/uwrt_mars_rover_hw/package.xml
+++ b/uwrt_mars_rover_hw/package.xml
@@ -15,8 +15,10 @@
     <depend>controller_manager</depend>
     <depend>hardware_interface</depend>
     <depend>joint_limits_interface</depend>
-    <depend>roscpp</depend>
     <depend>transmission_interface</depend>
+    <depend>roscpp</depend>
+
+    <depend>diff_drive_controller</depend>
 
     <export>
         <hardware_interface plugin="${prefix}/uwrt_mars_rover_hw_plugin.xml"/>
